welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:4: error: identifier expected but integer literal found.
			return 7:00
                                 ^alarmClock:5: error: identifier expected but integer literal found.
		} else return 10:00
                                 ^alarmClock:8: error: identifier expected but integer literal found.
			return 10:00
                                  ^